rename dir: assets -> images

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     const img = document.createElement('img');
     img.loading = 'lazy';
-    img.src = `./assets/hero/${name}/${name}.png`;
+    img.src = `./images/hero/${name}/${name}.png`;
     img.alt = name;
 
     const label = document.createElement('div');
